--- a/PMS/accounts/templates/accounts/homepage-admin.html
+++ b/PMS/accounts/templates/accounts/homepage-admin.html
@@ -13,7 +13,7 @@
 <body>
 
 <p>Welcome {{ user.username }} :)</p>
-<a href="/users/logout">Logout</a>
+<a href="/accounts/logout">Logout</a>
 
 <div class="container">
     <nav class="navbar navbar-default" role="navigation">
