--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -88,22 +88,12 @@
   </select>
 <select class="form-control" id="section">
     <option value="" disabled selected>choose section</option>
-    <option value ="A">A</option>
-    <option value ="B">B</option>
-    <option value ="C">C</option>
-    <option value ="D">D</option>
-    <option value ="E">E</option>
-    <option value ="F">F</option>
-    <option value ="G">G</option>
-    <option value ="H">H</option>
-    <option value ="I">I</option>
-    <option value ="J">J</option>
-    <option value ="K">K</option>
-    <option value ="L">L</option>
-    <option value ="M">M</option>
-    <option value ="N">N</option>
-    <option value ="SA">SA</option>
-    <option value ="SB">SB</option>
+    <option value ="7">7</option>
+    <option value ="8">8</option>
+    <option value ="8">9</option>
+    <option value ="10">10</option>
+    <option value ="11">11</option>
+    <option value ="12">12</option>
   </select>
 <input type="text" name="address" placeholder="address"  class="address"/><br>
 <input type="button" name="next" class="next action-button" value="Next" />
