--- a/PMS/accounts/templates/accounts/homepage-admin.html
+++ b/PMS/accounts/templates/accounts/homepage-admin.html
@@ -33,13 +33,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{% url 'accounts:addstudent' %}">Add student</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Search Student</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Add Funds</a></li>
+                            <li><a href="#">Edit Funds</a></li>
+                            <li><a href="#">View Funds</a></li>
                             <li class="divider"></li>
                             <li><a href="#">Separated link</a></li>
                             <li class="divider"></li>
