--- a/PMS/accounts/templates/accounts/index.html
+++ b/PMS/accounts/templates/accounts/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load staticfiles %}
 <html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
@@ -6,15 +7,15 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
+	<link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
+	<script src="{% static 'js/modernizr.js' %}"></script> <!-- Modernizr -->
   	
 	<title>Responsive Sidebar Navigation | CodyHouse</title>
 </head>
 <body>
 	<header class="cd-main-header">
-		<a href="#0" class="cd-logo"><img src="img/cd-logo.svg" alt="Logo"></a>
+		<a href="#0" class="cd-logo"><img src="{% static 'img/cd-logo.svg' %}" alt="Logo"></a>
 		
 		<div class="cd-search is-hidden">
 			<form action="#0">
@@ -30,7 +31,7 @@
 				<li><a href="#0">Support</a></li>
 				<li class="has-children account">
 					<a href="#0">
-						<img src="img/cd-avatar.png" alt="avatar">
+						<img src="{% static 'img/cd-avatar.png' %}" alt="avatar">
 						Account
 					</a>
 
@@ -120,8 +121,8 @@
 			<h1>Responsive Sidebar Navigation</h1>
 		</div> <!-- .content-wrapper -->
 	</main> <!-- .cd-main-content -->
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/jquery.menu-aim.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="{% static 'js/jquery-2.1.4.js' %}"></script>
+<script src="{% static 'js/jquery.menu-aim.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script> <!-- Resource jQuery -->
 </body>
 </html>
