added restrictions in authenticated student users

--- a/PMS/accounts/templates/accounts/index.html
+++ b/PMS/accounts/templates/accounts/index.html
@@ -32,7 +32,7 @@
 				<li class="has-children account">
 					<a href="#0">
 						<img src="{% static 'img/default.png' %}" alt="avatar">
-						{{ request.user.studentinfo.lastname }}
+						{{ request.user.studentinfo.firstname }}
 					</a>
 
 					<ul>
