--- a/PMS/accounts/templates/accounts/homepage.html
+++ b/PMS/accounts/templates/accounts/homepage.html
@@ -1,5 +1,15 @@
 {% load staticfiles %}
-{% block title %}{LNNCHS - PAYMENT MONITORING SYSTEM}{% endblock %}
+
+{% block css %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/homepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/carousel.css' %}">
+{% endblock css %}
+
+{% block title %}
+    <title> LNNCHS Payment Monitoring System </title>
+{% endblock title %}
+
 {% block body %}
 <nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
     <div class="container">
@@ -231,12 +241,13 @@
                 <h2 class="text-center"><img src="{% static 'img/LNNCHS_logo.png' %}" class="img-circle"><br>Admin Login</h2>
             </div>
             <div class="modal-body row">
-                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
+                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method="post" action="{% url 'accounts:AdminLogin' %}">
+                    {% csrf_token %}
                     <div class="form-group">
-                        <input type="text" class="form-control input-lg" placeholder="Admin ID">
+                        <input type="text" class="form-control input-lg" placeholder="Admin ID" name="username">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control input-lg" placeholder="Password">
+                        <input type="password" class="form-control input-lg" placeholder="Password" name="password">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-danger btn-lg btn-block">Sign In</button>
@@ -257,12 +268,13 @@
                 <h2 class="text-center"><img src="{% static 'img/LNNCHS_logo.png' %}" class="img-circle"><br>Student Login</h2>
             </div>
             <div class="modal-body row">
-                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0">
+                <form class="col-md-10 col-md-offset-1 col-xs-12 col-xs-offset-0" method="post" action="{% url 'accounts:StudentLogin' %}">
+                   {% csrf_token %}
                     <div class="form-group">
-                        <input type="text" class="form-control input-lg" placeholder="Student ID">
+                        <input type="text" class="form-control input-lg" placeholder="Student ID" name="student_ID">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control input-lg" placeholder="Password">
+                        <input type="password" class="form-control input-lg" placeholder="Password" name="password">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-danger btn-lg btn-block">Sign In</button>
@@ -274,4 +286,10 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock body %}
+
+{% block js %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="{% static 'js/homepage.js' %}"></script>
+{% endblock js %}
