--- a/PMS/accounts/templates/accounts/homepage-admin.html
+++ b/PMS/accounts/templates/accounts/homepage-admin.html
@@ -39,7 +39,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class="active"><a href="{% url 'funds:addfunds' %}">Add Funds</a></li>
-                            <li><a href="#">Edit Funds</a></li>
+                            <li class="active"><a href="{% url 'funds:editfunds' %}">Edit Funds</a></li>
                             <li><a href="#">View Funds</a></li>
                             <li class="divider"></li>
                             <li><a href="#">Separated link</a></li>
