--- a/PMS/accounts/templates/accounts/studentinfo_detail.html
+++ b/PMS/accounts/templates/accounts/studentinfo_detail.html
@@ -11,8 +11,7 @@
 <title> LNNCHS Payment Monitoring System Admin</title>
 </head>
 <body>
-	<p>HAHAH</p>
-	<p>{{ student.student_lastname}}</p>
+	<p>{{ object.student_lastname }}, {{ object.student_firstname }}</p>
 	<a href="/accounts/home">Back</a>
 
 </body>
