--- a/PMS/accounts/templates/accounts/studentinfo_detail.html
+++ b/PMS/accounts/templates/accounts/studentinfo_detail.html
@@ -11,8 +11,16 @@
 <title> LNNCHS Payment Monitoring System Admin</title>
 </head>
 <body>
-	<p>{{ object.student_lastname }}, {{ object.student_firstname }}</p>
+	<p>{{ object.student_lastname }}, {{ object.student_firstname }},
+		{{ object.student_middlename }}, {{ object.student_birthday }},
+		{{ object.student_year }}, {{ object.student_guardian}}
+
+	</p>
 	<a href="/accounts/home">Back</a>
 
 </body>
 </html>
+
+
+
+
