--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -1,3 +1,4 @@
+{% extends 'accounts/base.html' %}
 {% load staticfiles %}
 
 {% block css %}
@@ -16,47 +17,6 @@
 {% endblock title %}
    
 {% block body %}
-    <header class="cd-main-header">
-        <a href="#0" class="cd-logo"><img src="{% static 'img/cd-logo.svg' %}" alt="Logo"></a>
-        <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
-
-        <nav class="cd-nav">
-            <ul class="cd-top-nav">
-                <li class="has-children account">
-                    <a href="#0">
-                        <img src="{% static 'img/cd-avatar.png' %}" alt="avatar">
-                        Account
-                    </a>
-                    <ul>
-                        <li><a href="#0">My Account</a></li>
-                        <li><a href="#0">Edit Account</a></li>
-                        <li><a href="#0">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header> <!-- .cd-main-header -->
-
-    <main class="cd-main-content">
-        <nav class="cd-side-nav">
-            <ul>
-                <li class="cd-label">Main</li>
-                <li class="has-children overview">
-                    <a href="{% url 'accounts:Admin' %}">Homepage</a>
-                </li>
-                <li class="has-children notifications   active">
-                    <a href="{% url 'accounts:Students' %}">Students</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="funds.html">Funds</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="#0"m>Projects</a>
-                </li>
-            </ul>
-        </nav>
-</main>
-
 <div class="image-container set-full-height">
     <!--   Big container   -->
     <div class="container">
@@ -102,71 +62,41 @@
                                   <div class="col-sm-6">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        <input name="firstname" type="text" class="form-control" placeholder="First Name">
+                                        {{ form.first_name }}
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        <input name="lastname" type="text" class="form-control" placeholder="Last Name">
+                                        {{ form.last_name }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Username <small>(required)</small></label>
-                                          <input name="username" type="text" class="form-control" placeholder="20XX12345" rel="gp" data-size="5" data-character-set="0-9,u">
+                                          {{ form.username }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Password <small>(required)</small></label>
-                                          <input name="password" type="text" class="form-control" placeholder="********" rel="gp" data-size="8" data-character-set="a-z,A-Z,0-9">
+                                          {{ form.password1 }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Year</label><br>
-                                             <select name="year" class="form-control">
-                                                <option value="7"> 7 </option>
-                                                <option value="8"> 8 </option>
-                                                <option value="9"> 9 </option>
-                                                <option value="10"> 10 </option>
-                                                <option value="11"> 11 </option>
-                                                <option value="12"> 12 </option>
-                                            </select>
+                                            {{ form.year_level }}
                                           </div>
                                     </div>
                                     <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Section</label><br>
-                                             <select name="section" class="form-control">
-                                                <option value="A"> A </option>
-                                                <option value="B"> B </option>
-                                                <option value="C"> C </option>
-                                                <option value="D"> D </option>
-                                                <option value="E"> E </option>
-                                                <option value="F"> F </option>
-                                                <option value="G"> G </option>
-                                                <option value="H"> H </option>
-                                                <option value="I"> I </option>
-                                                <option value="10"> J </option>
-                                                <option value="K"> K </option>
-                                                <option value="L"> L </option>
-                                                <option value="M"> M </option>
-                                                <option value="N"> N </option>
-                                                <option value="SA"> Special A </option>
-                                                <option value="SB"> Special B </option>
-                                            </select>
+                                            {{ form.section }}
                                           </div>
                                     </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
-                                          <label>Email <small>(required)</small></label>
-                                          <input name="email" type="email" class="form-control" placeholder="andrew@creative-tim.com">
-                                      </div>
-                                  </div>
-                                  <div class="col-sm-10 col-sm-offset-1">
-                                      <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          <input name="address" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
+                                          {{ form.address }}
                                       </div>
                                   </div>
                               </div>
@@ -178,27 +108,23 @@
                                     <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Middle Name <small>(required)</small></label>
-                                        <input name="gmidname" type="text" class="form-control" placeholder="Parker...">
+                                        {{ form.guardian_fn }}
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        <input name="glastname" type="text" class="form-control" placeholder="Smith...">
+                                        {{ form.guardian_ln }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          <input name="gaddress" type="text" class="form-control" placeholder="6866 Williams Street Fayetteville, NC 28303">
+                                          {{ form.guardian_address }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Contact number <small>(required)</small></label>
-                                          <input name="gcontact" type="text" class="form-control" placeholder="441-5656">
+                                          {{ form.guardian_contact }}
                                       </div>
                                   </div>
                                     
@@ -209,20 +135,9 @@
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> If you have a sibling enrolled in the school, type in the oldest sibling. </h4>
                                        <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes" value="Code"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="Design"></CENTER> 
-                                      
-
-                                        <div class="col-sm-10 col-sm-offset-1" id = "sinfo" style="display:none;">
-                                      <div class="form-group">
-                                        <label>First Name <small>(required)</small></label>
-                                        <input name="sfirstname" type="text" class="form-control" placeholder="Andrew...">
-                                      </div>
-                                      <div class="form-group">
-                                        <label>Last Name <small>(required)</small></label>
-                                        <input name="slastname" type="text" class="form-control" placeholder="Smith...">
-                                      </div>
-                                  </div>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="Design"></CENTER>
                                     </div>
+                                </div>
                             </div>
                         </div>
                         <div class="tab-pane" id="scholarship">
