--- a/PMS/funds/templates/funds/fundinfo_detail.html
+++ b/PMS/funds/templates/funds/fundinfo_detail.html
@@ -11,9 +11,8 @@
 <title> LNNCHS Payment Monitoring System Admin</title>
 </head>
 <body>
-	<p>{{ object.project_id }}, {{ object.project_name }},
-		{{ object.project_receiver }}, {{ object.project_cost }}
-
+	<p>{{ fund.project_id }}, {{ fund.project_name }},
+		{{ fund.project_receiver }}, {{ fund.project_cost }}
 	</p>
 	<a href="/accounts/home">Back</a>
 
