--- a/PMS/accounts/templates/accounts/homepage-admin.html
+++ b/PMS/accounts/templates/accounts/homepage-admin.html
@@ -35,14 +35,14 @@
                     <li class="active"><a href="{% url 'accounts:addstudent' %}">Add student</a></li>
                     <li class="active"><a href="{% url 'accounts:searchstudent' %}">Search Student</a></li>
 
-                    <li class="active"><a href="#">View All Students</a></li>
+                    <li class="active"><a href="{% url 'accounts:viewallstudents' %}">View All Students</a></li>
 
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li class="active"><a href="{% url 'funds:addfunds' %}">Add Funds</a></li>
                             <li class="active"><a href="{% url 'funds:searchfunds' %}">Search Funds</a></li>
-                            <li><a href="#">View All Funds</a></li>
+                            <li class="active"><a href="{% url 'funds:viewallfunds' %}">View All Funds</a></li>
                             <li class="divider"></li>
                             <li><a href="#">Separated link</a></li>
                             <li class="divider"></li>
