--- a/PMS/accounts/templates/accounts/viewallstudents.html
+++ b/PMS/accounts/templates/accounts/viewallstudents.html
@@ -1,189 +1,5 @@
-<!doctype html>
-<html lang="en" class="no-js">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{%for object in object_list%}
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+<li>{{object.student_id}}   {{object.student_lastname}}, {{object.student_firstname}}, {{object.student_middlename}}</li> 
 
-    <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-    <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="css/metrobuttons.css">
-    <link rel="stylesheet" href="css/students.css"> 
-    <link rel="stylesheet" href="css/viewallstudent.css"> 
-    <link rel="stylesheet" type="text/css" href="css/metro-bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/docs.css">
-    
-    <script src="js/modernizr.js"></script> <!-- Modernizr -->
-    
-    <title>Responsive Sidebar Navigation | CodyHouse</title>
-</head>
-<body>
-    <header class="cd-main-header">
-        <a href="#0" class="cd-logo"><img src="img/cd-logo.svg" alt="Logo"></a>
-        
-        
-
-        <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
-
-        <nav class="cd-nav">
-            <ul class="cd-top-nav">
-                <li class="has-children account">
-                    <a href="#0">
-                        <img src="img/cd-avatar.png" alt="avatar">
-                        Account
-                    </a>
-
-                    <ul>
-
-                        <li><a href="#0">My Account</a></li>
-                        <li><a href="#0">Edit Account</a></li>
-                        <li><a href="#0">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header> <!-- .cd-main-header -->
-
-    <main class="cd-main-content">
-        <nav class="cd-side-nav">
-            <ul>
-                <li class="cd-label">Main</li>
-                <li class="has-children overview">
-                    <a href="homepageadmin.html">Homepage</a>
-                </li>
-                <li class="has-children notifications   active">
-                    <a href="students.html">Students</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="funds.html">Funds</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="#0"m>Projects</a>
-                </li>
-            </ul>
-        </nav>
-    </main> <!-- .cd-main-content -->
-
-    <div class="container">
-        <div class="col-md-3">
-            <form action="#" method="get">
-                <div class="input-group">
-                    <!-- USE TWITTER TYPEAHEAD JSON WITH API TO SEARCH -->
-                    <input class="form-control" id="system-search" name="q" placeholder="Search for" required>
-                    <span class="input-group-btn">
-                        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
-                    </span>
-                </div>
-            </form>
-        </div>
-    <div class="row">
-        
-        <div class="col-md-9">
-         <table class="table table-list-search">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Year</th>
-                            <th>Section</th>
-                            <th>Status</th>
-                            <th>Current Paid Amount</th>
-                            <th>Receivables</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Juan Miguel Dela Cruz</td>
-                            <td>12</td>
-                            <td>A</td>
-                            <td>Cleared</td>
-                            <td>123.00</td>
-                            <td>0.00</td>
-                            <td>
-                                <button class="button primary">Edit</button></th>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Corazon Alcantara</td>
-                            <td>11</td>
-                            <td>N</td>
-                            <td>Pending</td>
-                            <td>50.00</td>
-                            <td>76.00</td>
-                            <td>
-                                <button class="button primary">Edit</button></th>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Corazon Alcantara</td>
-                            <td>11</td>
-                            <td>N</td>
-                            <td>Pending</td>
-                            <td>50.00</td>
-                            <td>76.00</td>
-                            <td>
-                                <button class="button primary">Edit</button></th>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Corazon Alcantara</td>
-                            <td>11</td>
-                            <td>N</td>
-                            <td>Pending</td>
-                            <td>50.00</td>
-                            <td>76.00</td>
-                            <td>
-                                <button class="button primary">Edit</button></th>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Corazon Alcantara</td>
-                            <td>11</td>
-                            <td>N</td>
-                            <td>Pending</td>
-                            <td>50.00</td>
-                            <td>76.00</td>
-                            <td>
-                                <button class="button primary">Edit</button></th>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>   
-                <div class="bs-example">
-                  <div>
-                    <ul class="pagination pagination-sm">
-                      <li><a href="#">&laquo;</a></li>
-                      <li><a href="#">A-B</a></li>
-                      <li><a href="#">C-D</a></li>
-                      <li><a href="#">E-F</a></li>
-                      <li><a href="#">F-G</a></li>
-                      <li><a href="#">H-I</a></li>
-                      <li><a href="#">J-K</a></li>
-                      <li><a href="#">L-M</a></li>
-                      <li><a href="#">N-O</a></li>
-                      <li><a href="#">P-Q</a></li>
-                      <li><a href="#">R-S</a></li>
-                      <li><a href="#">T-U</a></li>
-                      <li><a href="#">V-W</a></li>
-                      <li><a href="#">X-Y</a></li>
-                      <li><a href="#">Z</a></li>
-                      <li><a href="#">&raquo;</a></li>
-                    </ul>
-                  </div>
-              </div>
-        </div>
-    </div>
-</div>
-<script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-</div>
-<script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-</div>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/jquery.menu-aim.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
-<script src="js/viewallstudents.js"></script> <!-- Resource jQuery -->
-<script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-</body>
-</html>
+{%endfor%}
