--- a/PMS/accounts/templates/accounts/base.html
+++ b/PMS/accounts/templates/accounts/base.html
@@ -8,7 +8,7 @@
 {% endblock css%}
 
 {% block title %}
-    <title>Responsive Sidebar Navigation | CodyHouse</title>
+    <title>LNNCHS-PMS</title>
 {% endblock title %}
 
     <header class="cd-main-header">
@@ -44,7 +44,7 @@
                     <a href="{% url 'accounts:Students' %}">Students</a>
                 </li>
                 <li class="has-children comments">
-                    <a href="funds.html">Funds</a>
+                    <a href="{% url 'funds:Funds' %}">Funds</a>
                 </li>
                 <li class="has-children comments">
                     <a href="#0"m>Projects</a>
