--- a/PMS/accounts/templates/accounts/homepageadmin.html
+++ b/PMS/accounts/templates/accounts/homepageadmin.html
@@ -10,7 +10,7 @@
 {% endblock css%}
 
 {% block title %}
-    <title>Responsive Sidebar Navigation | CodyHouse</title>
+    <title>Admin</title>
 {% endblock title %}
 
         {% block body%}
