--- a/PMS/accounts/templates/accounts/addstudents.html
+++ b/PMS/accounts/templates/accounts/addstudents.html
@@ -1,4 +1,5 @@
 {% extends 'accounts/base.html' %}
+
 {% load staticfiles %}
 
 {% block css %}
@@ -10,26 +11,25 @@
     <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
     <script src="{% static 'js/modernizr.js' %}"></script>
-{% endblock css%}
+{% endblock css %}
     
 {% block title %}
     <title>Add Students</title>
 {% endblock title %}
    
 {% block body %}
+
 <div class="image-container set-full-height">
     <!--   Big container   -->
     <div class="container">
         <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-           
-            <!--      Wizard container        -->   
-            <div class="wizard-container"> 
-                
+            <!--      Wizard container        -->
+            <div class="wizard-container">
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-                    <form action="{% url accounts:addStudent %}" method="post">
-                        {% csrf_token %}
+                    <form action="" method="post">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
+                        {% csrf_token %}
                         <div class="wizard-header">
                             <h3>
                                 <br>
@@ -45,7 +45,7 @@
                             <li><a href="#scholarship" data-toggle="tab">Scholarship</a></li>
                             <li><a href="#membership" data-toggle="tab">Membership</a></li>
                         </ul>
-                        
+
                         <div class="tab-content">
                             <div class="tab-pane" id="about">
                               <div class="row">
@@ -62,11 +62,11 @@
                                   <div class="col-sm-6">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        {{ form.first_name }}
+                                        {{ form.firstname }}
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        {{ form.last_name }}
+                                        {{ form.lastname }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
@@ -78,13 +78,13 @@
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Password <small>(required)</small></label>
-                                          {{ form.password1 }}
+                                          {{ form.password }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                          <div class="form-group">
                                             <label>Year</label><br>
-                                            {{ form.year_level }}
+                                            {{ form.year }}
                                           </div>
                                     </div>
                                     <div class="col-sm-10 col-sm-offset-1">
@@ -104,55 +104,55 @@
                             <div class="tab-pane" id="guardian">
                                 <h4 class="info-text"> Type in guardian's name. </h4>
                                 <div class="row">
-                                   
+
                                     <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                         <label>First Name <small>(required)</small></label>
-                                        {{ form.guardian_fn }}
+                                        {{ form.gfirstname }}
                                       </div>
                                       <div class="form-group">
                                         <label>Last Name <small>(required)</small></label>
-                                        {{ form.guardian_ln }}
+                                        {{ form.glastname }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Address <small>(required)</small></label>
-                                          {{ form.guardian_address }}
+                                          {{ form.gaddress }}
                                       </div>
                                   </div>
                                   <div class="col-sm-10 col-sm-offset-1">
                                       <div class="form-group">
                                           <label>Contact number <small>(required)</small></label>
-                                          {{ form.guardian_contact }}
+                                          {{ form.gcontact }}
                                       </div>
                                   </div>
-                                    
+
                                 </div>
                             </div>
                         <div class="tab-pane" id="siblings">
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
-                                        <h4 class="info-text"> If you have a sibling enrolled in the school, type in the oldest sibling. </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes" value="Code"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no"></label value="Design"></CENTER>
+                                        <h4 class="info-text"> If you have a sibling enrolled in the school. </h4>
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.sibling }}</label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no" value="No"></label></CENTER>
+                                        <div class="col-sm-10 col-sm-offset-1" id = "sinfo" style="display:none;">
+                                        </div>
                                     </div>
-                                </div>
                             </div>
                         </div>
                         <div class="tab-pane" id="scholarship">
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Do you have a scholarship? </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-sch" value="Code"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch"></label value="Design"></CENTER> 
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-sch" value="Yes"></label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-sch" value="No"></label></CENTER>
+
 
                                         <div class="col-sm-10 col-sm-offset-1" id = "schinfo" style="display:none;">
                                       <div class="form-group">
-                                        <label>Scholarship <small>(required)</small></label>
-                                        <select>
-
-                                        </select>
+                                        <label>Scholarship</label>
+                                        {{ form.scholarship }}
                                       </div>
                                   </div>
                                     </div>
@@ -162,15 +162,9 @@
                                 <div class="row">
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <h4 class="info-text"> Are you a member in any organization? </h4>
-                                       <CENTER><label for="danger" class="btn btn-danger"> Yes <input type="checkbox" id="yes-mem" value="Code"></label>
-                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem"></label value="Design"></CENTER> 
-                                      
-
+                                       <CENTER><label for="danger" class="btn btn-danger"> Yes {{ form.band_member}}</label>
+                                        <label for="danger" class="btn btn-danger"> No <input type="checkbox"  id="no-mem" value="No"></label></CENTER>
                                         <div class="col-sm-10 col-sm-offset-1" id = "meminfo" style="display:none;">
-                                      <div class="form-group">
-                                        <label>Name of Organization <small>(required)</small></label>
-                                        <input name="gfirstname" type="text" class="form-control" placeholder="Drum and Buggle">
-                                      </div>
                                   </div>
                                     </div>
                             </div>
@@ -180,24 +174,25 @@
                             <div class="pull-right">
                                 <input type='button' class='btn btn-next btn-fill btn-danger btn-wd btn-sm' name='next' value='Next' />
                                 <input type='submit' class='btn btn-finish btn-fill btn-danger btn-wd btn-sm' name='finish' value='Finish' />
-        
+
                             </div>
-                            
+
                             <div class="pull-left">
                                 <input type='button' class='btn btn-previous btn-fill btn-default btn-wd btn-sm' name='previous' value='Previous' />
                             </div>
                             <div class="clearfix"></div>
-                        </div>  
+                        </div>
                     </form>
                 </div>
             </div> <!-- wizard container -->
         </div>
         </div><!-- end row -->
     </div> <!--  big container -->
+
 </div>
 {% endblock body%}
 
-{% block js%}
+{% block js %}
     <!-- jQuery -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <!-- jQuery easing plugin -->
