--- a/PMS/funds/templates/funds/addfunds.html
+++ b/PMS/funds/templates/funds/addfunds.html
@@ -1,3 +1,5 @@
+{% extends 'accounts/base.html' %}
+
 {% load staticfiles %}
 
 {% block css %}
@@ -16,62 +18,16 @@
 {% endblock title %}
 
 {% block body %}
-    <header class="cd-main-header">
-        <a href="#0" class="cd-logo"><img src="{% static 'img/cd-logo.svg' %}" alt="Logo"></a>
-
-        <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
-
-        <nav class="cd-nav">
-            <ul class="cd-top-nav">
-                <li class="has-children account">
-                    <a href="#0">
-                        <img src="{% static 'img/cd-avatar.png' %}" alt="avatar">
-                        Account
-                    </a>
-                    <ul>
-                        <li><a href="#0">My Account</a></li>
-                        <li><a href="#0">Edit Account</a></li>
-                        <li><a href="#0">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header> <!-- .cd-main-header -->
-
-    <main class="cd-main-content">
-        <nav class="cd-side-nav">
-            <ul>
-                <li class="cd-label">Main</li>
-                <li class="has-children overview">
-                    <a href="homepageadmin.html">Homepage</a>
-                </li>
-                <li class="has-children notifications   active">
-                    <a href="students.html">Students</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="funds.html">Funds</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="#0"m>Projects</a>
-                </li>
-            </ul>
-        </nav>
-</main>
-
 <div class="image-container set-full-height">
-       
     <!--   Big container   -->
     <div class="container">
         <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
-           
             <!--      Wizard container        -->   
-            <div class="wizard-container"> 
-                
+            <div class="wizard-container">
                 <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
                     <form action="" method="">
                 <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
-                
                         <div class="wizard-header">
                             <h3>
                                 <br>
@@ -124,26 +80,22 @@
         </div>
         </div><!-- end row -->
     </div> <!--  big container -->
-    
 </div>
+{% endblock body %}
 
-<!-- jQuery --> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<!-- jQuery easing plugin --> 
-<script src="js/jquery.easing.min.js" type="text/javascript"></script> 
-<script src="js/main.js"></script> 
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-        
+{% block js %}
+    <!-- jQuery -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <!-- jQuery easing plugin -->
+    <script src="{% static 'js/jquery.easing.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
     <!--   plugins   -->
-    <script src="js/jquery.bootstrap.wizard.js" type="text/javascript"></script>
-    
+    <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
-    <script src="js/jquery.validate.min.js"></script>
-    
+    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
     <!--  methods for manipulating the wizard and the validation -->
-    <script src="js/wizard.js"></script>
-
-    <script src="js/passwordGenerator.js"></script>
-</body>
-</html>
+    <script src="{% static 'js/wizard.js' %}"></script>
+    <script src="{% static 'js/passwordGenerator.js' %}"></script>
+{% endblock js %}
