--- a/PMS/funds/templates/funds/editfund.html
+++ b/PMS/funds/templates/funds/editfund.html
@@ -1,72 +1,29 @@
-<html>
-<head>
-<link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-<meta charset="UTF-8">
+{% extends 'accounts/base.html' %}
+
+{% load staticfiles %}
+
+{% block css %}
+    <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/gsdk-base.css" rel="stylesheet" />   
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/gsdk-base.css' %}" rel="stylesheet" />
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-    <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-    <script src="js/modernizr.js"></script> 
-
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
+    <script src="{% static 'js/modernizr.js' %}"></script>
+{% endblock css%}
     
-    
+{% block title %}
     <title>Edit Funds</title>
+{% endblock title %}
 
-   
-</head>
-<body>
-    <header class="cd-main-header">
-        <a href="#0" class="cd-logo"><img src="img/cd-logo.svg" alt="Logo"></a>
-        
-        
-
-        <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
-
-        <nav class="cd-nav">
-            <ul class="cd-top-nav">
-                <li class="has-children account">
-                    <a href="#0">
-                        <img src="img/cd-avatar.png" alt="avatar">
-                        Account
-                    </a>
-                    <ul>
-                        <li><a href="#0">My Account</a></li>
-                        <li><a href="#0">Edit Account</a></li>
-                        <li><a href="#0">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header> <!-- .cd-main-header -->
-
-    <main class="cd-main-content">
-        <nav class="cd-side-nav">
-            <ul>
-                <li class="cd-label">Main</li>
-                <li class="has-children overview">
-                    <a href="homepageadmin.html">Homepage</a>
-                </li>
-                <li class="has-children notifications   active">
-                    <a href="students.html">Students</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="funds.html">Funds</a>
-                </li>
-                <li class="has-children comments">
-                    <a href="#0"m>Projects</a>
-                </li>
-            </ul>
-        </nav>
-</main>
-
+{% block body %}
 <div class="image-container set-full-height">
-       
     <!--   Big container   -->
     <div class="container">
         <div class="row">
@@ -131,26 +88,22 @@
         </div>
         </div><!-- end row -->
     </div> <!--  big container -->
-    
 </div>
+{% endblock body %}
 
-<!-- jQuery --> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<!-- jQuery easing plugin --> 
-<script src="js/jquery.easing.min.js" type="text/javascript"></script> 
-<script src="js/main.js"></script> 
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-        
+{% block js %}
+    <!-- jQuery -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <!-- jQuery easing plugin -->
+    <script src="{% static 'js/jquery.easing.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'js/jquery-1.10.2.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
     <!--   plugins   -->
-    <script src="js/jquery.bootstrap.wizard.js" type="text/javascript"></script>
-    
+    <script src="{% static 'js/jquery.bootstrap.wizard.js' %}" type="text/javascript"></script>
     <!--  More information about jquery.validate here: http://jqueryvalidation.org/  -->
-    <script src="js/jquery.validate.min.js"></script>
-    
+    <script src="{% static 'js/jquery.validate.min.js' %}"></script>
     <!--  methods for manipulating the wizard and the validation -->
-    <script src="js/wizard.js"></script>
-
-    <script src="js/passwordGenerator.js"></script>
-</body>
-</html>
+    <script src="{% static 'js/wizard.js' %}"></script>
+    <script src="{% static 'js/passwordGenerator.js' %}"></script>
+{% endblock js %}
