--- a/PMS/funds/templates/funds/funds.html
+++ b/PMS/funds/templates/funds/funds.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
@@ -6,21 +7,24 @@
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-    <link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="css/metrobuttons.css">
-    <link rel="stylesheet" href="css/students.css"> 
-    <link rel="stylesheet" href="css/addstudents.css"> 
-    <link rel="stylesheet" type="text/css" href="css/metro-bootstrap.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/docs.css">
-    <script src="js/modernizr.js"></script> <!-- Modernizr -->
-    
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}"> <!-- CSS reset -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> <!-- Resource style -->
+    <link rel="stylesheet" href="{% static 'css/metrobuttons.css' %}">
+    <link rel="stylesheet" href="{% static 'css/students.css' %}">
+    <link rel="stylesheet" href="{% static 'css/addstudents.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/metro-bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/docs.css' %}">
+    <script src="{% static 'js/modernizr.js' %}"></script> <!-- Modernizr -->
+
+{% block title %}
     <title>Funds</title>
+{% endblock title %}
 </head>
+{% block body %}
 <body>
     <header class="cd-main-header">
-        <a href="#0" class="cd-logo"><img src="img/cd-logo.svg" alt="Logo"></a>
+        <a href="#0" class="cd-logo"><img src="{% static 'img/cd-logo.svg' %}" alt="Logo"></a>
         
         
 
@@ -30,7 +34,7 @@
             <ul class="cd-top-nav">
                 <li class="has-children account">
                     <a href="#0">
-                        <img src="img/cd-avatar.png" alt="avatar">
+                        <img src="{% static 'img/cd-avatar.png' %}" alt="avatar">
                         Account
                     </a>
 
@@ -50,13 +54,13 @@
             <ul>
                 <li class="cd-label">Main</li>
                 <li class="has-children overview">
-                    <a href="homepageadmin.html">Homepage</a>
+                    <a href="{% url 'accounts:Admin' %}">Homepage</a>
                 </li>
                 <li class="has-children notifications">
-                    <a href="students.html">Students</a>
+                    <a href="{% url 'accounts:Students' %}">Students</a>
                 </li>
                 <li class="has-children notifications active">
-                    <a href="funds.html">Funds</a>
+                    <a href="{% url 'funds:Funds' %}">Funds</a>
                 </li>
                 <li class="has-children notifications">
                     <a href="#0"m>Projects</a>
@@ -83,10 +87,15 @@
 
 </div>
 </div>
+
+{% block js %}
 <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="js/jquery-2.1.4.js"></script>
-<script src="js/jquery.menu-aim.js"></script>
-<script src="js/main.js"></script> <!-- Resource jQuery -->
+<script src="{% static 'js/jquery-2.1.4.js' %}"></script>
+<script src="{% static 'js/jquery.menu-aim.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script> <!-- Resource jQuery -->
 <script class="cssdeck" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+{% endblock js %}
+
 </body>
+{% endblock body %}
 </html>
