--- a/PMS/funds/templates/funds/fundinfo_detail.html
+++ b/PMS/funds/templates/funds/fundinfo_detail.html
@@ -11,8 +11,8 @@
 <title> LNNCHS Payment Monitoring System Admin</title>
 </head>
 <body>
-	<p>{{ fund.project_id }}, {{ fund.project_name }},
-		{{ fund.project_receiver }}, {{ fund.project_cost }}
+	<p>{{ fund.due_id }}, {{ fund.due_name }},
+		{{ fund.due_cost }}
 	</p>
 	<a href="/accounts/home">Back</a>
 
