--- a/PMS/funds/templates/funds/search_fund_result.html
+++ b/PMS/funds/templates/funds/search_fund_result.html
@@ -7,7 +7,7 @@
 	        {% for fund in funds %}
 
             <li class="fund">{{fund }}
-                (<a href="{% url 'funds:editfunds' fund.project_id %}">edit</a> <a href="{% url 'funds:viewfunds' fund.project_id %}">view</a>)
+                (<a href="{% url 'funds:editfunds' fund.due_id %}">edit</a> <a href="{% url 'funds:viewfunds' fund.due_id %}">view</a>)
             </li>
 <!-- pde ra butngan ni nmo dri greg ug edit tapad sa each attribute.meheee -->
 	        {% endfor %}
