--- a/PMS/funds/templates/funds/viewallfunds.html
+++ b/PMS/funds/templates/funds/viewallfunds.html
@@ -1,6 +1,6 @@
 {%for object in object_list%}
 
-<li>{{object.project_id}}   {{object.project_name}}, {{object.project_receiver}}, {{object.project_cost}}</li> 
+<li>{{object.due_id}}   {{object.due_name}}, {{object.due_cost}}</li> 
 
 {%endfor%}
 
