--- a/PMS/accounts/templates/accounts/homepage-admin.html
+++ b/PMS/accounts/templates/accounts/homepage-admin.html
@@ -37,6 +37,10 @@
 
                     <li class="active"><a href="{% url 'accounts:viewallstudents' %}">View All Students</a></li>
 
+                    <li><a href="{% url 'accounts:studentswithliabilities' %}">View Students with liabilities</a></li>
+
+                    <li><a href="{% url 'accounts:createpayment' %}">Create Payment</a></li>
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -44,10 +48,12 @@
                             <li class="active"><a href="{% url 'funds:searchfunds' %}">Search Funds</a></li>
                             <li class="active"><a href="{% url 'funds:viewallfunds' %}">View All Funds</a></li>
                             <li class="divider"></li>
-                            <li><a href="{% url 'accounts:studentswithliabilities' %}">View Students with liabilities</a></li>
-
                             <li><a href="{% url 'funds:viewmoneyonhand' %}">View Total Money on Hand</a></li>
-                            <li class="divider"></li>
+
+                            <li><a href="{% url 'funds:addproject' %}">Add a new Project</a></li>
+                            <li><a href="{% url 'funds:searchproject' %}">Search Project</a></li>
+                            <li><a href="{% url 'funds:viewallprojects' %}">View All Projects</a></li>
+                            
                             <li><a href="#">One more separated link</a></li>
                         </ul>
                     </li>
