--- a/PMS/accounts/templates/accounts/homepage-admin.html
+++ b/PMS/accounts/templates/accounts/homepage-admin.html
@@ -41,6 +41,8 @@
 
                     <li><a href="{% url 'accounts:createpayment' %}">Create Payment</a></li>
 
+                    <li><a href="{% url 'accounts:enterdiscount' %}">Add discount</a></li>
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Funds <b class="caret"></b></a>
                         <ul class="dropdown-menu">
