--- a/PMS/accounts/templates/accounts/create_payment.html
+++ b/PMS/accounts/templates/accounts/create_payment.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+<!-- {% load staticfiles %}
 <!DOCTYPE html>
 <html>
 
@@ -7,10 +7,36 @@
             {% csrf_token %}
              <div class="form-group">
              <p>Enter student number:</p>
-              <input type="text" name="input">
+              <input type="number" name="input">
              </div>
 
             <input type="submit" name="submit" value="Search"/>
+        </form>
+
+    </body>
+</html> -->
+
+{% load staticfiles %}
+<!DOCTYPE html>
+<html>
+
+    <body>
+        <div class="col-md-6 col-md-offset-3">
+            <div class="errors">
+                {{ error }}
+
+                {% if form.errors %}
+                    <p>{{ form.errors }}</p>
+                {% endif %}
+            </div>
+        </div>
+        <form id="add_student" method="post" action="" role ="form">
+            {% csrf_token %}
+             <div class="form-group">
+             {{ form.as_p }}
+             </div>
+
+            <input type="submit" name="submit" value="Create"/>
         </form>
 
     </body>
